--- a/tomee/tomee-plus-webapp/pom.xml
+++ b/tomee/tomee-plus-webapp/pom.xml
@@ -500,9 +500,13 @@
           <patchSources>
             <source>${project.basedir}/../../transform/src/patch/java/</source>
           </patchSources>
-          <replacements>
-            <openejb-version.properties>${project.build.outputDirectory}/openejb-version.properties</openejb-version.properties>
-          </replacements>
+          <replace>
+            <resources>
+              <openejb-version.properties>${project.build.outputDirectory}/openejb-version.properties</openejb-version.properties>
+            </resources>
+          </replace>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
         <executions>
           <execution>
