--- a/tomee/tomee-webprofile-webapp/pom.xml
+++ b/tomee/tomee-webprofile-webapp/pom.xml
@@ -180,9 +180,13 @@
           <sourceExcludes>
             <exclude>org/apache/cxf</exclude>
           </sourceExcludes>
-          <replacements>
-            <openejb-version.properties>${project.build.outputDirectory}/openejb-version.properties</openejb-version.properties>
-          </replacements>
+          <replace>
+            <resources>
+              <openejb-version.properties>${project.build.outputDirectory}/openejb-version.properties</openejb-version.properties>
+            </resources>
+          </replace>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
         <executions>
           <execution>
