Add org.apache.cxf.jaxrs back as patchable

--- a/tomee/tomee-plume-webapp/pom.xml
+++ b/tomee/tomee-plume-webapp/pom.xml
@@ -469,9 +469,9 @@
             <source>${project.basedir}/../../transform/src/patch/java/</source>
 <!--            <source>${project.basedir}/src/patch/java/</source>-->
           </patchSources>
-          <sourceExcludes>
-            <exclude>org/apache/cxf/jaxrs</exclude>
-          </sourceExcludes>
+<!--          <sourceExcludes>-->
+<!--            <exclude>org/apache/cxf/jaxrs</exclude>-->
+<!--          </sourceExcludes>-->
           <replace>
             <!-- We don't want these bytecode modified at all, so we overwrite
             any modifications made by the Eclipse Transformer with the originals -->
