--- a/tomee/tomee-plume-webapp/pom.xml
+++ b/tomee/tomee-plume-webapp/pom.xml
@@ -367,6 +367,11 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>7.0.0.Final</version>
+    </dependency>
+    <dependency>
       <groupId>xml-apis</groupId>
       <artifactId>xml-apis</artifactId>
       <scope>runtime</scope>
@@ -388,10 +393,10 @@
         <version>3.1.0</version>
         <configuration>
           <dependentWarExcludes>
-            %regex[(WEB-INF/)?lib/(tomee-)?myfaces(-api|-impl)?-.*.jar],
+            %regex[(WEB-INF/)?lib/(tomee-)?myfaces(-api|-impl)?-.*.jar],%regex[(WEB-INF/)?lib/bval?-.*.jar],
           </dependentWarExcludes>
           <packagingExcludes>
-            %regex[(WEB-INF/)?lib/(tomee-)?myfaces(-api|-impl)?-.*.jar],
+            %regex[(WEB-INF/)?lib/(tomee-)?myfaces(-api|-impl)?-.*.jar],%regex[(WEB-INF/)?lib/bval?-.*.jar],
           </packagingExcludes>
         </configuration>
       </plugin>
@@ -480,6 +485,7 @@
             <!-- We don't want these bytecode modified at all, so we overwrite
             any modifications made by the Eclipse Transformer with the originals -->
             <jars>
+              <hibernate-validator-7.0.0.Final.jar>org.hibernate.validator:hibernate-validator:6.0.2.Final</hibernate-validator-7.0.0.Final.jar>
               <jakarta.faces-3.0.0.jar>org.glassfish:jakarta.faces:jar:3.0.0</jakarta.faces-3.0.0.jar>
               <eclipselink-3.0.0.jar>org.eclipse.persistence:eclipselink:jar:3.0.0</eclipselink-3.0.0.jar>
             </jars>
