--- a/tomee/tomee-webprofile-webapp/pom.xml
+++ b/tomee/tomee-webprofile-webapp/pom.xml
@@ -178,8 +178,9 @@
             <source>${project.basedir}/../../transform/src/patch/java/</source>
           </patchSources>
           <sourceExcludes>
-            <exclude>org/apache/cxf</exclude>
+<!--            <exclude>org/apache/cxf</exclude>-->
           </sourceExcludes>
+          <transformSources>true</transformSources>
           <replace>
             <resources>
               <openejb-version.properties>${project.build.outputDirectory}/openejb-version.properties</openejb-version.properties>
