--- a/tomee/tomee-plume-webapp/pom.xml
+++ b/tomee/tomee-plume-webapp/pom.xml
@@ -72,7 +72,7 @@
       <exclusions>
         <exclusion>
           <groupId>org.apache.bval</groupId>
-          <artifactId>*</artifactId>
+          <artifactId>bval-jsr</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -214,7 +214,7 @@
         </exclusion>
         <exclusion>
           <groupId>org.apache.bval</groupId>
-          <artifactId>*</artifactId>
+          <artifactId>bval-jsr</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -386,6 +386,17 @@
       <artifactId>xml-apis</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tomee</groupId>
+      <artifactId>openejb-core</artifactId>
+      <version>${tomee.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.bval</groupId>
+          <artifactId>bval-jsr</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 
   <build>
@@ -403,10 +414,12 @@
         <version>3.1.0</version>
         <configuration>
           <dependentWarExcludes>
-            %regex[(WEB-INF/)?lib/(tomee-)?myfaces(-api|-impl)?-.*.jar],%regex[(WEB-INF/)?lib/bval?-.*.jar],
+            %regex[(WEB-INF/)?lib/bval-jsr-.*.jar],
+            %regex[(WEB-INF/)?lib/(tomee-)?myfaces(-api|-impl)?-.*.jar],
           </dependentWarExcludes>
           <packagingExcludes>
-            %regex[(WEB-INF/)?lib/(tomee-)?myfaces(-api|-impl)?-.*.jar],%regex[(WEB-INF/)?lib/bval?-.*.jar],
+            %regex[(WEB-INF/)?lib/bval-jsr-.*.jar],
+            %regex[(WEB-INF/)?lib/(tomee-)?myfaces(-api|-impl)?-.*.jar],
           </packagingExcludes>
         </configuration>
       </plugin>
