--- a/tomee/tomee-plume-webapp/pom.xml
+++ b/tomee/tomee-plume-webapp/pom.xml
@@ -38,6 +38,12 @@
   </properties>
   <dependencies>
 
+    <dependency>
+      <groupId>org.apache.bval</groupId>
+      <artifactId>bval-jsr</artifactId>
+      <version>2.0.5</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency><!-- needed by myfaces -->
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
@@ -72,7 +78,7 @@
       <exclusions>
         <exclusion>
           <groupId>org.apache.bval</groupId>
-          <artifactId>*</artifactId>
+          <artifactId>bval-jsr</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
