Create jakartaee-api to replace javaee-api

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
   </properties>
 
   <modules>
+    <module>jakartaee-api</module>
     <module>boms</module>
     <module>tomee</module>
     <module>transform</module>
