--- a/tomee/tomee-plume-webapp/pom.xml
+++ b/tomee/tomee-plume-webapp/pom.xml
@@ -58,6 +58,13 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>javaee-api</artifactId>
       <classifier>tomcat</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomee</groupId>
+      <artifactId>jakartaee-api</artifactId>
+      <version>9.1.0-SNAPSHOT</version>
+      <classifier>tomcat</classifier>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
