--- a/jakartaee-api/pom.xml
+++ b/jakartaee-api/pom.xml
@@ -335,16 +335,16 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-annotation_1.3_spec</artifactId>
-      <version>${geronimo-annotation_1.3_spec.version}</version>
-      <classifier>sources</classifier>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>2.0.0</version>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-annotation_1.3_spec</artifactId>
-      <version>${geronimo-annotation_1.3_spec.version}</version>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>2.0.0</version>
+      <classifier>sources</classifier>
       <optional>true</optional>
     </dependency>
 
@@ -373,20 +373,6 @@
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-ejb_3.2_spec</artifactId>
       <version>${geronimo-ejb_3.2_spec.version}</version>
-      <optional>true</optional>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-interceptor_1.2_spec</artifactId>
-      <version>${geronimo-interceptor_1.2_spec.version}</version>
-      <classifier>sources</classifier>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-interceptor_1.2_spec</artifactId>
-      <version>${geronimo-interceptor_1.2_spec.version}</version>
       <optional>true</optional>
     </dependency>
 
