--- a/jakartaee-api/pom.xml
+++ b/jakartaee-api/pom.xml
@@ -321,16 +321,16 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-security_1.0_spec</artifactId>
-      <version>${geronimo-security_1.0_spec.version}</version>
-      <classifier>sources</classifier>
+      <groupId>jakarta.security.enterprise</groupId>
+      <artifactId>jakarta.security.enterprise-api</artifactId>
+      <version>2.0.0</version>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-security_1.0_spec</artifactId>
-      <version>${geronimo-security_1.0_spec.version}</version>
+      <groupId>jakarta.security.enterprise</groupId>
+      <artifactId>jakarta.security.enterprise-api</artifactId>
+      <version>2.0.0</version>
+      <classifier>sources</classifier>
       <optional>true</optional>
     </dependency>
 
