--- a/jakartaee-api/pom.xml
+++ b/jakartaee-api/pom.xml
@@ -363,16 +363,16 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-ejb_3.2_spec</artifactId>
-      <version>${geronimo-ejb_3.2_spec.version}</version>
-      <classifier>sources</classifier>
+      <groupId>jakarta.ejb</groupId>
+      <artifactId>jakarta.ejb-api</artifactId>
+      <version>4.0.0</version>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-ejb_3.2_spec</artifactId>
-      <version>${geronimo-ejb_3.2_spec.version}</version>
+      <groupId>jakarta.ejb</groupId>
+      <artifactId>jakarta.ejb-api</artifactId>
+      <version>4.0.0</version>
+      <classifier>sources</classifier>
       <optional>true</optional>
     </dependency>
 
@@ -541,16 +541,16 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jta_1.2_spec</artifactId>
-      <version>${geronimo-jta_1.2_spec.version}</version>
+      <groupId>jakarta.transaction</groupId>
+      <artifactId>jakarta.transaction-api</artifactId>
+      <version>2.0.0</version>
       <classifier>sources</classifier>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jta_1.2_spec</artifactId>
-      <version>${geronimo-jta_1.2_spec.version}</version>
+      <groupId>jakarta.transaction</groupId>
+      <artifactId>jakarta.transaction-api</artifactId>
+      <version>2.0.0</version>
       <optional>true</optional>
     </dependency>
 
