--- a/jakartaee-api/pom.xml
+++ b/jakartaee-api/pom.xml
@@ -377,16 +377,16 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-j2ee-connector_1.6_spec</artifactId>
-      <version>${geronimo-j2ee-connector_1.6_spec.version}</version>
-      <classifier>sources</classifier>
+      <groupId>jakarta.resource</groupId>
+      <artifactId>jakarta.resource-api</artifactId>
+      <version>2.0.0</version>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-j2ee-connector_1.6_spec</artifactId>
-      <version>${geronimo-j2ee-connector_1.6_spec.version}</version>
+      <groupId>jakarta.resource</groupId>
+      <artifactId>jakarta.resource-api</artifactId>
+      <version>2.0.0</version>
+      <classifier>sources</classifier>
       <optional>true</optional>
     </dependency>
 
