--- a/jakartaee-api/pom.xml
+++ b/jakartaee-api/pom.xml
@@ -512,17 +512,18 @@
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jms_2.0_spec</artifactId>
-      <version>${geronimo-jms_2.0_spec.version}</version>
-      <classifier>sources</classifier>
+      <groupId>jakarta.jms</groupId>
+      <artifactId>jakarta.jms-api</artifactId>
+      <version>3.0.0</version>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jms_2.0_spec</artifactId>
-      <version>${geronimo-jms_2.0_spec.version}</version>
+      <groupId>jakarta.jms</groupId>
+      <artifactId>jakarta.jms-api</artifactId>
+      <version>3.0.0</version>
+      <classifier>sources</classifier>
       <optional>true</optional>
     </dependency>
 
@@ -667,15 +668,15 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-concurrent_1.0_spec</artifactId>
-      <version>${geronimo-concurrent_1.0_spec.version}</version>
+      <groupId>jakarta.enterprise.concurrent</groupId>
+      <artifactId>jakarta.enterprise.concurrent-api</artifactId>
+      <version>2.0.0</version>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-concurrent_1.0_spec</artifactId>
-      <version>${geronimo-concurrent_1.0_spec.version}</version>
+      <groupId>jakarta.enterprise.concurrent</groupId>
+      <artifactId>jakarta.enterprise.concurrent-api</artifactId>
+      <version>2.0.0</version>
       <classifier>sources</classifier>
       <optional>true</optional>
     </dependency>
