--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
     <commons-logging.version>1.2</commons-logging.version>
     <commons-net.version>3.7.2</commons-net.version>
     <commons-pool.version>2.3</commons-pool.version>
-    <cxf.version>3.5.0-SNAPSHOT</cxf.version>
+    <cxf.version>3.4.3</cxf.version>
     <geronimo-activation_1.1_spec.version>1.1</geronimo-activation_1.1_spec.version>
     <geronimo-javamail_1.6_mail.version>1.0.0</geronimo-javamail_1.6_mail.version>
     <geronimo-javamail_1.6_spec.version>1.0.0</geronimo-javamail_1.6_spec.version>
