--- a/tomee/apache-tomee/pom.xml
+++ b/tomee/apache-tomee/pom.xml
@@ -547,7 +547,7 @@
           <plugin>
             <groupId>org.apache.tomee.patch</groupId>
             <artifactId>tomee-patch-plugin</artifactId>
-            <version>0.4-SNAPSHOT</version>
+            <version>0.4</version>
             <configuration>
               <select>apache-tomee-(plus|plume|webprofile|microprofile).*\.zip</select>
               <skipTransform>true</skipTransform>
@@ -720,7 +720,7 @@
           <plugin>
             <groupId>org.apache.tomee.patch</groupId>
             <artifactId>tomee-patch-plugin</artifactId>
-            <version>0.4-SNAPSHOT</version>
+            <version>0.4</version>
             <configuration>
               <select>apache-tomee-(plus|plume|webprofile|microprofile).*\.zip</select>
               <skipTransform>true</skipTransform>
