--- a/tomee/tomee-webprofile-webapp/pom.xml
+++ b/tomee/tomee-webprofile-webapp/pom.xml
@@ -171,7 +171,7 @@
       <plugin>
         <groupId>org.apache.tomee.patch</groupId>
         <artifactId>tomee-patch-plugin</artifactId>
-        <version>0.4-SNAPSHOT</version>
+        <version>0.4</version>
         <configuration>
           <select>tomee-webprofile-webapp-transformed-.*\.war</select>
           <patchSources>
@@ -188,6 +188,20 @@
           </replace>
           <source>1.8</source>
           <target>1.8</target>
+          <dependencies>
+            <dependency>org.apache.aries.blueprint:blueprint-parser:jar:1.6.0</dependency>
+            <dependency>org.apache.aries.blueprint:org.apache.aries.blueprint.api:jar:1.0.1</dependency>
+            <dependency>org.apache.aries.blueprint:org.apache.aries.blueprint.core:jar:1.10.2</dependency>
+            <dependency>org.apache.tomcat:tomcat-servlet-api:jar:10.0.4</dependency>
+            <dependency>org.osgi:org.osgi.core:jar:6.0.0</dependency>
+            <dependency>org.osgi:osgi.cmpn:jar:6.0.0</dependency>
+            <dependency>org.ow2.asm:asm:jar:9.1</dependency>
+            <dependency>org.springframework:spring-aop:jar:5.3.6</dependency>
+            <dependency>org.springframework:spring-beans:jar:5.3.6</dependency>
+            <dependency>org.springframework:spring-context:jar:5.3.6</dependency>
+            <dependency>org.springframework:spring-core:jar:5.3.6</dependency>
+            <dependency>org.springframework:spring-webmvc:jar:5.3.6</dependency>
+          </dependencies>
         </configuration>
         <executions>
           <execution>
