--- a/tomee/tomee-webprofile-webapp/pom.xml
+++ b/tomee/tomee-webprofile-webapp/pom.xml
@@ -171,7 +171,7 @@
       <plugin>
         <groupId>org.apache.tomee.patch</groupId>
         <artifactId>tomee-patch-plugin</artifactId>
-        <version>0.4</version>
+        <version>0.5</version>
         <configuration>
           <select>tomee-webprofile-webapp-transformed-.*\.war</select>
           <patchSources>
@@ -215,6 +215,27 @@
     </plugins>
   </build>
   <dependencies>
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.2</version>
+      <exclusions>
+        <exclusion> <!-- Is already included in java-ee-api -->
+          <artifactId>jakarta.activation</artifactId>
+          <groupId>jakarta.activation-api</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>jakarta.activation</artifactId>
+      <version>1.2.1</version>
+    </dependency>
     <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
