--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   <groupId>org.apache.tomee</groupId>
   <artifactId>tomee-project</artifactId>
   <packaging>pom</packaging>
-  <version>9.0.0-M7-SNAPSHOT</version>
+  <version>9.0.0-M7</version>
 
   <name>TomEE :: TomEE :: Apache TomEE 9</name>
   <description>Jakarta EE 9 version of Apache TomEE</description>
@@ -47,7 +47,7 @@
     <connection>scm:git:git@github.com:apache/tomee-jakarta.git</connection>
     <url>scm:git:git@github.com:apache/tomee-jakarta.git</url>
     <developerConnection>scm:git:git@github.com:apache/tomee-jakarta.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>tomee-project-9.0.0-M7</tag>
   </scm>
 
   <issueManagement>
