--- a/tomee/pom.xml
+++ b/tomee/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.apache.tomee</groupId>
     <artifactId>tomee-project</artifactId>
-    <version>9.0.0-M7-SNAPSHOT</version>
+    <version>9.0.0-M7</version>
   </parent>
   
   <artifactId>tomee</artifactId>
