--- a/transform/pom.xml
+++ b/transform/pom.xml
@@ -18,15 +18,14 @@
 -->
 <!-- $Rev$ $Date$ -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.apache.tomee</groupId>
     <artifactId>tomee-project</artifactId>
-    <version>9.0.0-M7-SNAPSHOT</version>
+    <version>9.0.0-M7</version>
   </parent>
 
   <artifactId>transform</artifactId>
