Yank jaxb-runtime module

--- a/pom.xml
+++ b/pom.xml
@@ -1325,6 +1325,12 @@
     </pluginManagement>
   </build>
 
+  <repositories>
+    <repository>
+      <id>staging-tomee-patch-plugin</id>
+      <url>https://repository.apache.org/content/repositories/orgapachetomee-1182</url>
+    </repository>
+  </repositories>
   <pluginRepositories>
     <pluginRepository>
       <id>staging-tomee-patch-plugin</id>
