--- a/tomee/tomee-plume-webapp/pom.xml
+++ b/tomee/tomee-plume-webapp/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.tomee</groupId>
     <artifactId>tomee</artifactId>
-    <version>9.0.0-M7-SNAPSHOT</version>
+    <version>9.0.0-M7</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -83,7 +83,7 @@
     <dependency>
       <groupId>org.apache.tomee</groupId>
       <artifactId>jakartaee-api</artifactId>
-      <version>9.1.0-SNAPSHOT</version>
+      <version>9.1.0</version>
       <classifier>tomcat</classifier>
     </dependency>
     <dependency>
